tests/snapshots/bundle__main_code.snap
---
source: tests/bundle.rs
expression: b.code
---
--!nocheck
-- Bundled by KlSMBundlerLuau 0.1.0 from ServerScriptService/Server/Main.server.luau (2 modules). Generated file: edit the sources, not this.
local __KLSM_modules = {}
local __KLSM_names = {}
local __KLSM_cache = {}
local __KLSM_LOADING, __KLSM_FAILED = {}, {}

local function __KLSM_require(id)
	local cached = __KLSM_cache[id]
	if cached == __KLSM_LOADING then
		error("Requested module was required recursively: " .. __KLSM_names[id], 2)
	elseif cached == __KLSM_FAILED then
		error("Requested module experienced an error while loading: " .. __KLSM_names[id], 2)
	elseif cached ~= nil then
		return cached[1]
	end
	__KLSM_cache[id] = __KLSM_LOADING
	local ok, results = xpcall(function()
		return table.pack(__KLSM_modules[id]())
	end, function(err)
		return err
	end)
	if not ok then
		__KLSM_cache[id] = __KLSM_FAILED
		error(results, 0)
	end
	if results.n ~= 1 then
		__KLSM_cache[id] = __KLSM_FAILED
		error("Module code did not return exactly one value: " .. __KLSM_names[id], 2)
	end
	__KLSM_cache[id] = { results[1] }
	return results[1]
end

-- Stand-in for `script` inside bundled modules: the original ModuleScript no longer
-- exists at runtime, so its surroundings are rebuilt from the bundled modules' paths.
-- Lookups walk that tree (GetChildren, FindFirstChild, IsA) and `require` of a stand-in
-- loads the bundled module, so loaders that scan a folder keep working.
local __KLSM_Script = {}
local __KLSM_refs = {}
local __KLSM_index
local function __KLSM_node(path)
	if not __KLSM_index then
		__KLSM_index = { [""] = { children = {} } }
		for id, name in __KLSM_names do
			local at = ""
			for _, segment in string.split(name, ".") do
				local child = if at == "" then segment else at .. "." .. segment
				if not __KLSM_index[child] then
					__KLSM_index[child] = { children = {} }
					table.insert(__KLSM_index[at].children, segment)
				end
				at = child
			end
			__KLSM_index[at].id = id
		end
	end
	return __KLSM_index[path]
end
local function __KLSM_ref(segments)
	local path = table.concat(segments, ".")
	local ref = __KLSM_refs[path]
	if not ref then
		ref = setmetatable({ __segments = segments, __path = path }, __KLSM_Script)
		__KLSM_refs[path] = ref
	end
	return ref
end
local function __KLSM_child(self, name)
	local segments = table.clone(rawget(self, "__segments"))
	table.insert(segments, name)
	return __KLSM_ref(segments)
end
local function __KLSM_class(self)
	local node = __KLSM_node(rawget(self, "__path"))
	return if node and not node.id then "Folder" else "ModuleScript"
end
local function __KLSM_children(self)
	local node = __KLSM_node(rawget(self, "__path"))
	local out = {}
	for _, name in if node then node.children else {} do
		table.insert(out, __KLSM_child(self, name))
	end
	return out
end
local function __KLSM_find(self, name)
	local child = __KLSM_child(self, name)
	return if __KLSM_node(rawget(child, "__path")) then child else nil
end
local function __KLSM_descendants(self, out)
	out = out or {}
	for _, child in __KLSM_children(self) do
		table.insert(out, child)
		__KLSM_descendants(child, out)
	end
	return out
end
local function __KLSM_isa(self, class)
	local own = __KLSM_class(self)
	return class == own or class == "Instance" or (own == "ModuleScript" and class == "LuaSourceContainer")
end
local function __KLSM_ancestor(self, name)
	local segments = table.clone(rawget(self, "__segments"))
	table.remove(segments)
	while #segments > 0 do
		if segments[#segments] == name then
			return __KLSM_ref(segments)
		end
		segments = table.clone(segments)
		table.remove(segments)
	end
	return nil
end
local function __KLSM_fullname(self)
	return rawget(self, "__path")
end
local __KLSM_methods = {
	WaitForChild = __KLSM_child,
	FindFirstChild = __KLSM_find,
	GetChildren = __KLSM_children,
	GetDescendants = function(self)
		return __KLSM_descendants(self)
	end,
	IsA = __KLSM_isa,
	FindFirstAncestor = __KLSM_ancestor,
	GetFullName = __KLSM_fullname,
}
__KLSM_Script.__index = function(self, key)
	local segments = rawget(self, "__segments")
	if key == "Name" then
		return segments[#segments]
	elseif key == "Parent" then
		local parent = table.clone(segments)
		table.remove(parent)
		return __KLSM_ref(parent)
	elseif key == "ClassName" then
		return __KLSM_class(self)
	elseif __KLSM_methods[key] then
		return __KLSM_methods[key]
	end
	return __KLSM_child(self, key)
end
__KLSM_Script.__tostring = function(self)
	local segments = rawget(self, "__segments")
	return segments[#segments] or "game"
end
local __KLSM_script = __KLSM_ref
local __KLSM_realrequire = require
local function require(module)
	if type(module) == "table" and getmetatable(module) == __KLSM_Script then
		local node = __KLSM_node(rawget(module, "__path"))
		if node and node.id then
			return __KLSM_require(node.id)
		end
		error("Attempted to call require with invalid argument(s).", 2)
	end
	return __KLSM_realrequire(module)
end
__KLSM_names[1] = "ReplicatedStorage.Shared.Greeter"
__KLSM_modules[1] = function(...) local script = __KLSM_script({"ReplicatedStorage", "Shared", "Greeter"}) -- ReplicatedStorage/Shared/Greeter.luau
local Counter = __KLSM_require(2 --[[ReplicatedStorage.Shared.Util.Counter]])
local Util = script.Parent.Util -- alias used only for a require below
local Again = __KLSM_require(2 --[[ReplicatedStorage.Shared.Util.Counter]])

local Greeter = {}
Greeter.name = script.Name
Greeter.parentName = script.Parent.Name
Greeter.sameModule = Counter == Again

function Greeter.greet(who: string): string
	local c = Counter.new()
	Counter.bump(c)
	return `hello {who} #{c.value}`
end

return Greeter
end
__KLSM_names[2] = "ReplicatedStorage.Shared.Util.Counter"
__KLSM_modules[2] = function(...) -- ReplicatedStorage/Shared/Util/Counter.luau
--!strict
 type Counter = { value: number }

local Counter = {}

function Counter.new(): Counter
	return { value = 0 }
end

function Counter.bump(c: Counter): number
	c.value += 1
	return c.value
end

return Counter
end
do -- ServerScriptService/Server/Main.server.luau
local ReplicatedStorage = game:GetService("ReplicatedStorage")
local Greeter = __KLSM_require(1 --[[ReplicatedStorage.Shared.Greeter]])
print(Greeter.greet("server"))
end
