tests/snapshots/bundle__suite_diagnostics.snap
---
source: tests/bundle.rs
expression: diagnostics(&b)
---
warning: ReplicatedStorage/Shared/Greeter.luau:6: `script` used at runtime (lines 6, 7); in the bundle it is a stand-in that only knows its Name, Parent and the bundled modules around it
